fix: :bug: Fixed dragging roles on mobile

--- a/src/components/servers/settings/roles/styles.module.scss
+++ b/src/components/servers/settings/roles/styles.module.scss
@@ -18,7 +18,6 @@
   border-radius: 8px;
   transition: 0.2s;
   cursor: pointer;
-  text-decoration: none;
   .roleDot {
     width: 8px;
     height: 8px;
